cargo-features = ["per-package-target", "profile-rustflags", "resolver"]

[workspace]
resolver = "2"
members = [
    # mnemOS source
    "source/*",

    # tools
    "tools/*",

    # platforms
    "platforms/allwinner-d1/*",
    "platforms/beepy",
    "platforms/esp32c3-buddy",
    "platforms/melpomene",
    "platforms/melpomene/melpo-config",
    "platforms/x86_64/*",
    "platforms/pomelo",
]
# by default, run cargo commands without a specific package against everything
# that can build cross-platform.
default-members = [
    # mnemOS source
    "source/*",

    # tools
    "tools/*",

    # platforms
    "platforms/allwinner-d1/core",
    "platforms/beepy",
    "platforms/melpomene",
    "platforms/melpomene/melpo-config",
    "platforms/x86_64/core",
]
# this isn't actually a crate
exclude = ["source/notes"]

[workspace.package]
edition = "2021"
repository = "https://github.com/tosc-rs/mnemos"
homepage = "https://mnemos.dev"
license = "MIT OR Apache-2.0"

[profile.release]
codegen-units = 1 # better optimizations
debug = 2 # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[profile.release.package.mnemos-esp32c3-buddy]
# opt-level='z' is broken on esp32c3
opt-level = "s"
rustflags = [
    "-C", "link-arg=-Tlinkall.x",
    # Required to obtain backtraces (e.g. when using the "esp-backtrace" crate.)
    # NOTE: May negatively impact performance of produced code
    "-C", "force-frame-pointers",
]

[profile.dev.package.mnemos-esp32c3-buddy]
# opt-level='z' is broken on esp32c3
opt-level = "s"
rustflags = [
    "-C", "link-arg=-Tlinkall.x",
    # Required to obtain backtraces (e.g. when using the "esp-backtrace" crate.)
    # NOTE: May negatively impact performance of produced code
    "-C", "force-frame-pointers",
]

[patch.crates-io.maitake]
git = "https://github.com/hawkw/mycelium.git"
rev = "101a4abaa19afdd131b334a16d92c9fb4909c064"

[patch.crates-io.mycelium-util]
git = "https://github.com/hawkw/mycelium.git"
rev = "101a4abaa19afdd131b334a16d92c9fb4909c064"

# Use the `mycelium-bitfield` crate from the Mycelium monorepo rather than
# crates.io.
# NOTE: this patch, unlike the patches for `maitake` and `mycelium-util`, (which
# are unpublished), is not *strictly* necessary, as `mycelium-bitfield` *is*
# published to crates.io. However, we may as well depend on the git version,
# since it's already in our dependency tree as a transitive dep of `maitake` ---
# having both a Git dep and a crates.io dep seems unfortunate.
[patch.crates-io.mycelium-bitfield]
git = "https://github.com/hawkw/mycelium.git"
rev = "101a4abaa19afdd131b334a16d92c9fb4909c064"

[patch.crates-io.cordyceps]
git = "https://github.com/hawkw/mycelium.git"
rev = "101a4abaa19afdd131b334a16d92c9fb4909c064"

[patch.crates-io.bbq10kbd]
git = "https://github.com/hawkw/bbq10kbd"
branch = "eliza/async"
