cargo-features = [
    # Allows setting a different target triple on a per-crate level. This is
    # required to include platform crates (which require specific target
    # triples) in the main workspace.
    #
    # See: https://doc.rust-lang.org/cargo/reference/unstable.html#per-package-target
    "per-package-target",
    # Some platform implementations require specific RUSTFLAGS environment
    # variables to configure the compiler's behavior, such as setting linker
    # arguments. This unstable feature allows us to configure these RUSTFLAGS in
    # the Cargo.toml on a per-crate basis, rather than requiring a separate
    # `.cargo/config.toml` in each platform crate (and necessitating `cd`ing
    # into those crates' directories in order to build the crate).
    #
    # See: https://doc.rust-lang.org/cargo/reference/unstable.html#profile-rustflags-option
    "profile-rustflags",
]

[workspace]
resolver = "2"
members = [
    # mnemOS source
    "source/*",

    # tools
    "tools/*",

    # platforms
    "platforms/allwinner-d1/*",
    "platforms/beepy",
    "platforms/esp32c3-buddy",
    "platforms/melpomene",
    "platforms/melpomene/melpo-config",
    "platforms/x86_64/*",
    "platforms/pomelo",
]
# By default, run cargo commands without a specific package against everything
# that can build cross-platform. This avoids incompatible feature unification
# while running `cargo check`/`cargo fmt`/etc for most workspace crates.
#
# Incompatible crates are checked/built/formatted/documented individually by the
# `just check`, `just clippy`, `just docs`, and `just fmt` Just recipes.
default-members = [
    # mnemOS source
    "source/*",

    # tools
    "tools/*",

    # platforms
    "platforms/allwinner-d1/core",
    "platforms/beepy",
    "platforms/melpomene",
    "platforms/melpomene/melpo-config",
]
# this isn't actually a crate
exclude = ["source/notes"]

[workspace.package]
edition = "2021"
repository = "https://github.com/tosc-rs/mnemos"
homepage = "https://mnemos.dev"
license = "MIT OR Apache-2.0"

### profile settings ###

[profile.release]
lto = 'thin' # better optimizations at a lower cost

## profile settings for D1 ##

[profile.release.package.mnemos-d1]
codegen-units = 1 # better optimizations
# faster optimizations --- we don't need opt-level='s'/'z' on D1, since we have
# a whopping 1GB of RAM!
opt-level = 3
# symbols are nice and they don't increase the size on Flash
debug = "line-tables-only"

[profile.dev.package.mnemos-d1]
# faster optimizations --- we don't need opt-level='s'/'z' on D1, since we have
# a whopping 1GB of RAM!
opt-level = 3
debug = true

## profile settings for esp32c3-buddy ##

[profile.release.package.mnemos-esp32c3-buddy]
codegen-units = 1 # better optimizations
# opt-level='z' is broken on esp32c3.
#
# See: https://github.com/esp-rs/esp-hal/pull/198
opt-level = "s"
# symbols are nice and they don't increase the size on Flash
debug = "line-tables-only"
rustflags = [
    "-C", "link-arg=-Tlinkall.x",
    # Required to obtain backtraces (e.g. when using the "esp-backtrace" crate.)
    # NOTE: May negatively impact performance of produced code
    "-C", "force-frame-pointers",
]

[profile.dev.package.mnemos-esp32c3-buddy]
codegen-units = 1 # better optimizations
# opt-level='z' is broken on esp32c3.
#
# See: https://github.com/esp-rs/esp-hal/pull/198
opt-level = "s"
# symbols are nice and they don't increase the size on Flash
debug = true
rustflags = [
    "-C", "link-arg=-Tlinkall.x",
    # Required to obtain backtraces (e.g. when using the "esp-backtrace" crate.)
    # NOTE: May negatively impact performance of produced code
    "-C", "force-frame-pointers",
]

## profile settings for x86_64 ##

[profile.release.package.mnemos-x86_64-core]
codegen-units = 1 # better optimizations
# faster optimizations --- we don't need to optimize for size on x86
opt-level = 3
# symbols are nice and they don't increase the size on Flash
debug = "line-tables-only"

[profile.dev.package.mnemos-x86_64-core]
# faster optimizations --- we don't need to optimize for size on x86
opt-level = 3
debug = true

### patches ###

[patch.crates-io.maitake]
git = "https://github.com/hawkw/mycelium.git"
rev = "101a4abaa19afdd131b334a16d92c9fb4909c064"

[patch.crates-io.mycelium-util]
git = "https://github.com/hawkw/mycelium.git"
rev = "101a4abaa19afdd131b334a16d92c9fb4909c064"

# Use the `mycelium-bitfield` crate from the Mycelium monorepo rather than
# crates.io.
# NOTE: this patch, unlike the patches for `maitake` and `mycelium-util`, (which
# are unpublished), is not *strictly* necessary, as `mycelium-bitfield` *is*
# published to crates.io. However, we may as well depend on the git version,
# since it's already in our dependency tree as a transitive dep of `maitake` ---
# having both a Git dep and a crates.io dep seems unfortunate.
[patch.crates-io.mycelium-bitfield]
git = "https://github.com/hawkw/mycelium.git"
rev = "101a4abaa19afdd131b334a16d92c9fb4909c064"

[patch.crates-io.cordyceps]
git = "https://github.com/hawkw/mycelium.git"
rev = "101a4abaa19afdd131b334a16d92c9fb4909c064"

[patch.crates-io.bbq10kbd]
git = "https://github.com/hawkw/bbq10kbd"
branch = "eliza/async"
