[workspace]
members = [
    "kernel",
    "abi",
    "mstd",
    "spitebuf",
]

[patch.crates-io.maitake]
git = "https://github.com/jamesmunns/mycelium.git"
rev = "833c343dcdf725b621ecdb6aae3873d984563a61"

[patch.crates-io.cordyceps]
git = "https://github.com/jamesmunns/mycelium.git"
rev = "833c343dcdf725b621ecdb6aae3873d984563a61"

[patch.crates-io.linked_list_allocator]
git = "https://github.com/jamesmunns/linked-list-allocator"
branch = "james-miri"

[patch.crates-io.mnemos-alloc]
git = "https://github.com/tosc-rs/mnemos-alloc"
rev = "e960ed90595cf76e916de47f2f9d9f24ab1be30e"
# path = "/home/james/tosc/mnemos-alloc"
