[workspace]
members = [
    "kernel",
    "abi",
    "mstd",
    "spitebuf",
    "melpomene",
]

[patch.crates-io.maitake]
git = "https://github.com/hawkw/mycelium.git"
rev = "eb9974e22bb2e822a0ddad3c0488e331a494dea5"

[patch.crates-io.cordyceps]
git = "https://github.com/hawkw/mycelium.git"
rev = "eb9974e22bb2e822a0ddad3c0488e331a494dea5"

[patch.crates-io.mnemos-alloc]
git = "https://github.com/tosc-rs/mnemos-alloc"
rev = "43810d55c165666271f288373b48b821edc656d6"
# path = "/home/james/tosc/mnemos-alloc"
