[workspace]
members = [
    "kernel",
    "abi",
    "mstd",
    "spitebuf",
    "melpomene",
]

[patch.crates-io.maitake]
git = "https://github.com/hawkw/mycelium.git"
rev = "23db951d19cf410e07ed4c2c47ead20d2b592d21"

[patch.crates-io.cordyceps]
git = "https://github.com/hawkw/mycelium.git"
rev = "23db951d19cf410e07ed4c2c47ead20d2b592d21"

[patch.crates-io.mnemos-alloc]
git = "https://github.com/tosc-rs/mnemos-alloc"
rev = "f0363a2b2f851e97644582d7966488abe5b201ca"
# path = "/home/james/tosc/mnemos-alloc"
