[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.serde]
version = "1.0.136"
default-features = false
features = ["derive"]

[dependencies.postcard]
version = "0.7.3"

[dependencies.defmt]
version = "0.3"
optional = true

[features]
use-defmt = ["defmt"]
default = []
