[package]
name = "mnemos-alloc"
version = "0.1.0"
edition = "2021"

categories = [
    "embedded",
    "no-std",
]
license = "MIT OR Apache-2.0"

[dependencies.maitake]
version = "0.1"
default-features = false

[dependencies.heapless]
version = "0.7.10"
features = ["defmt-impl"]

[dependencies.linked_list_allocator]
version = "0.9.1"
default-features = false

