[package]
name = "melpomene"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.mnemos-abi]
path = "../abi"

[dependencies.mnemos-std]
path = "../mstd"

[dependencies.postcard]
version = "0.7.3"
default-features = false
