[package]
name = "mnemos-userspace"
version = "0.1.0"
description = "A tiny embedded operating system userspace library"
repository = "https://github.com/jamesmunns/pellegrino"
authors = ["James Munns <james@onevariable.com>"]
edition = "2021"
readme = "./README.md"

categories = [
    "embedded",
    "no-std",
]
license = "MIT OR Apache-2.0"

[lib]
name = "userspace"

[dependencies]

[dependencies.common]
package = "mnemos-common"
version = "0.1.0"
path = "../common"
