[package]
name = "mnemos-abi"
version = "0.1.0"
description = "A tiny embedded operating system common library"
repository = "https://github.com/jamesmunns/pellegrino"
authors = ["James Munns <james@onevariable.com>"]
edition = "2021"
readme = "./README.md"

categories = [
    "embedded",
    "no-std",
]
license = "MIT OR Apache-2.0"

[lib]
name = "abi"

[dependencies]

[dependencies.serde]
version = "1.0.136"
default-features = false
features = ["derive"]

[dependencies.postcard]
version = "1.0.1"

[dependencies.defmt]
version = "0.3"
optional = true

[features]
use-defmt = ["defmt"]
default = []
