[package]
name = "mnemos-abi"
version = "0.1.0"
description = """
Data structures and definitions shared between the kernel and userspace.
"""
authors = ["James Munns <james@onevariable.com>"]
edition = "2021"
readme = "./README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tosc-rs/mnemos"
homepage = "https://mnemos.dev"
categories = [
    "embedded",
    "no-std",
]

[lib]
name = "abi"

[dependencies]

[dependencies.serde]
version = "1.0.136"
default-features = false
features = ["derive"]

[dependencies.postcard]
version = "1.0.1"

[dependencies.defmt]
version = "0.3"
optional = true

[features]
use-defmt = ["defmt"]
default = []
