cargo-features = ["per-package-target", "profile-rustflags"]

[package]
name = "mnemos-alloc"
description = """
An async allocator wrapper. This crate provides collection types and helper functions to allow
for async handling of allocations, including turning allocation async.
"""
version = "0.1.0"
edition = "2021"
readme = "./README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tosc-rs/mnemos"
homepage = "https://mnemos.dev"
categories = [
    "embedded",
    "no-std",
]

[dependencies.cordyceps]
workspace = true
default-features = false

[dependencies.maitake]
workspace = true
default-features = false

[dependencies.heapless]
version = "0.7.10"
features = ["defmt-impl"]

[dependencies.linked_list_allocator]
version = "0.10.1"
default-features = false

[dependencies.portable-atomic]
version = "1.3.3"
default-features = false

[features]
default = []
use-std = []
# enables tracking heap allocation statistics.
stats = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
