[package]
name = "mnemos-beepy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.mnemos]
path = "../kernel"
default-features = false

[dependencies.bbq10kbd]
version = "0.1.0"

[dependencies.uuid]
version = "1.1.2"
default-features = false
features = ["serde"]