[package]
name = "mnemos-bitslab"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
portable-atomic = { version = "1", default-features = false }
maitake-sync = { version = "0.1", default-features = false }

[dev-dependencies]
proptest = "1"
tracing = "0.1.37"

[target.'cfg(not(loom))'.dev-dependencies]
futures = { version = "0.3.16" }
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["fmt", "ansi"] }

[target.'cfg(loom)'.dev-dependencies.loom]
version = "0.7"
features = ["futures", "checkpoint"]