[package]
name = "forth3"
version = "0.1.0"
edition = "2021"
description = """
forth3 is a forth-inspired scripting language runtime. It can be used
on targets without an allocator, and supports native builtins written
in Rust, either as async or blocking functions.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
hash32 = "0.3.1"

[dependencies.portable-atomic]
version = "1.3"
default-features = false
features = ["require-cas"]

[features]
default = []
use-std = []
floats = []
async = []

# Not a public feature!
_force_test_utils = ["futures"]

[dependencies.futures]
# AJM: TODO, getting things to be available in doctests is a little weird.
version = "0.3.28"
optional = true

[dev-dependencies]
futures = "0.3.28"
