[package]
name = "mnemos"
version = "0.1.0"
description = "A tiny embedded operating system kernel"
repository = "https://github.com/jamesmunns/pellegrino"
authors = ["James Munns <james@onevariable.com>"]
edition = "2021"
readme = "./README.md"

categories = [
    "embedded",
    "no-std",
]
license = "MIT OR Apache-2.0"

[lib]
name = "kernel"

[dependencies]

[dependencies.futures]
version = "0.3.21"
default-features = false

[dependencies.uuid]
version = "1.1.2"
default-features = false
features = ["serde"]

[dependencies.cobs]
version = "0.2.3"
default-features = false

[dependencies.tracing-01]
package = "tracing"
version = "0.1.35"
features = ["attributes"]
default-features = false
optional = true

[dependencies.tracing-02]
package = "tracing"
git = "https://github.com/tokio-rs/tracing"
# branch = "master"
features = ["attributes"]
default-features = false
optional = true

[dependencies.tracing-core-02]
package = "tracing-core"
git = "https://github.com/tokio-rs/tracing"
# branch = "master"
default-features = false
optional = true

[dependencies.tracing-serde-structured]
git = "https://github.com/hawkw/tracing-serde-structured"
branch = "eliza/tracing-02"
default-features = false
optional = true

[dependencies.mnemos-trace-proto]
path = "../trace-proto"
optional = true

[dependencies.maitake]
version = "0.1.0"
default-features = false

[dependencies.mycelium-util]
version = "0.1.0"
default-features = false

[dependencies.spitebuf]
path = "../spitebuf"

[dependencies.mnemos-alloc]
version = "0.1.0"

[dependencies.heapless]
version = "0.7.10"
features = ["defmt-impl"]

[dependencies.mnemos-abi]
version = "0.1.0"
path = "../abi"
features = ["use-defmt"]

[dependencies.serde]
version = "1.0.136"
default-features = false
features = ["derive"]

[dependencies.postcard]
version = "1.0.1"
features = ["experimental-derive"]

[dependencies.embedded-graphics]
version = "0.7.1"

[dependencies.forth3]
path = "../forth3"
features = ["async"]

[dependencies.portable-atomic]
version = "1"

[features]
default = ["tracing-01"]
tracing-02 = ["dep:tracing-02", "tracing-core-02", "tracing-serde-structured", "mnemos-trace-proto"]

# The `_oops_all_tracing_features` feature is a "trap" for when the package is built
# with `--all-features`, which is usually just for docs and testing.
#
# In that case, the other feature settings (`tracing-01` and `tracing-02`) are ignored
# and JUST `tracing-01` is enabled. This is an unfortunate hack that works too well
# not to use for now.
_oops_all_tracing_features = []
